[added] show more button [fixed] layout problems

--- a/wertpapieranlagen/src/app/home-page/home-page.component.css
+++ b/wertpapieranlagen/src/app/home-page/home-page.component.css
@@ -1,10 +1,15 @@
+html, body {
+  height: 100%;
+  margin: 30px;
+}
+
 #container {
   width: 100%;
   height: 100%;
   display: flex;
-  justify-content: center;
-  align-items: center;
   flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
 }
 
 #top-elements {
@@ -12,18 +17,17 @@
   height: 60px;
   align-items: center;
   justify-content: space-between;
-  margin: 7px;
   width: 100%;
+  margin: 10px;
 }
 
 #right-icons {
   display: flex;
   align-items: center;
   justify-content: flex-end;
-  margin-right: 10px;
   gap: 15px;
+  margin-right: 10px;
 }
-
 
 #right-icons>*>* {
   height: 40px;
@@ -48,7 +52,6 @@
   height: 30px;
 }
 
-
 #erstes-depot-view {
   display: flex;
   justify-content: center;
@@ -64,20 +67,19 @@
 }
 
 #main-section {
-  width: 98%;
+  width: 100%;
   height: 55vh;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
+  gap: 15px;
   margin: 10px;
 }
 
 #graphic {
   width: 100%;
   height: 100%;
-  margin: 10px;
-  padding: 10px;
 }
 
 #canvas {
@@ -90,10 +92,8 @@
   height: 100%;
   display: flex;
   flex-direction: column;
-  gap: 10px;
   align-items: center;
   justify-content: top;
-  margin: 10px;
 }
 
 #list-wertpapiere img {
@@ -118,5 +118,21 @@ th, td {
   justify-content: space-between;
   align-items: center;
   width: 100%;
-  padding: 10px;
+  margin: 20px;
+}
+
+#bottom-elements > * {
+  height: 30px;
+  margin: 10px;
+}
+
+#expand-button {
+  height: 25px;
+  width: 25px;
+  margin: 5px auto;
+}
+
+#expand-button img {
+  height: 100%;
+  width: 100%;
 }
